--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ nav {
   -webkit-user-select: none;
   height: 10em;
   position: absolute;
-  z-index: 0;
   left: 0;
   right: 0;
   top: 0; }
@@ -63,13 +62,13 @@ nav {
     -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.92);
     text-align: center;
     text-transform: uppercase;
-    font-size: 82px;
+    font-size: 62px;
     line-height: 70px;
     height: 70px;
     width: 70px;
     cursor: -webkit-grab;
-    color: magenta;
-    opacity: 0.5; }
+    opacity: 1;
+    -webkit-animation: colorswap 30s infinite; }
     .head .inner:hover {
       -webkit-transform: scale(1.5); }
     .head .inner:active {
