potential performacne enhancement

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
   font: 20px/1.25em "Karla", sans-serif; }
 
 body {
-  color: blue;
+  color: black;
   border-color: blue;
   -webkit-animation: colorswap 30s infinite;
   background: white;
@@ -46,6 +46,7 @@ a, a:visited {
 
 nav {
   -webkit-user-select: none;
+  -webkit-transform: translate3d(0, 0, 0);
   height: 0em;
   position: absolute;
   left: 0;
