--- a/style.sass
+++ b/style.sass
@@ -9,7 +9,7 @@ html
   font: 20px/1.25em "Karla", sans-serif
 
 body
-  color: blue
+  color: black
   border-color: blue
   -webkit-animation: colorswap 30s infinite
   background: white
@@ -49,6 +49,7 @@ $size: 70px
 
 nav 
   -webkit-user-select: none
+  -webkit-transform: translate3d(0,0,0)
   height: 0em
   position: absolute
   left: 0
