--- a/style.sass
+++ b/style.sass
@@ -49,7 +49,6 @@ $size: 70px
 
 nav 
   -webkit-user-select: none
-  -webkit-transform: translate3d(0,0,0)
   height: 0em
   position: absolute
   left: 0
@@ -114,7 +113,7 @@ section
   padding-top: 2em
 
 .people
-  -webkit-columns: 3
+  //-webkit-columns: 3
 
 .people > li
   cursor: pointer
