--- a/style.sass
+++ b/style.sass
@@ -51,6 +51,7 @@ nav
   -webkit-user-select: none
   height: 0em
   position: absolute
+  z-index: 999
   left: 0
   right: 0
   top: 0
@@ -116,7 +117,7 @@ section
   //-webkit-columns: 3
 
 .people > li
-  cursor: pointer
+  // cursor: pointer
   position: relative
   &::after
     font-size: 0.7em
