removed color-change to test performance

--- a/style.sass
+++ b/style.sass
@@ -11,7 +11,7 @@ html
 body
   color: black
   border-color: blue
-  -webkit-animation: colorswap 30s infinite
+  //-webkit-animation: colorswap 30s infinite
   background: white
   -webkit-transition: all 0.5s
 
@@ -21,7 +21,7 @@ body
   max-width: 1000px
 
 a, a:visited
-  -webkit-animation: colorswap 30s infinite
+  //-webkit-animation: colorswap 30s infinite
   text-decoration: none
   border-bottom: 1px dotted blue
   &:hover
@@ -64,7 +64,7 @@ nav
     font-weight: bold
     border: 1px solid blue
     color: blue
-    -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
+    //-webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
     text-align: center
     text-transform: uppercase
     font-size: 20px
