actually removed animation

--- a/style.sass
+++ b/style.sass
@@ -64,7 +64,7 @@ nav
     font-weight: bold
     border: 1px solid blue
     color: blue
-    //-webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
+    -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
     text-align: center
     text-transform: uppercase
     font-size: 20px
@@ -74,7 +74,7 @@ nav
     cursor: -webkit-grab
     //color: magenta
     opacity: 1
-    -webkit-animation: colorswap 30s infinite
+    //-webkit-animation: colorswap 30s infinite
     &:hover
       -webkit-transform: scale(1.5)
       // &::after
