--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ nav {
     font-weight: bold;
     border: 1px solid blue;
     color: blue;
+    -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.92);
     text-align: center;
     text-transform: uppercase;
     font-size: 20px;
@@ -66,8 +67,7 @@ nav {
     height: 70px;
     width: 70px;
     cursor: -webkit-grab;
-    opacity: 1;
-    -webkit-animation: colorswap 30s infinite; }
+    opacity: 1; }
     .head .inner:hover {
       -webkit-transform: scale(1.5); }
     .head .inner:active {
