--- a/style.sass
+++ b/style.sass
@@ -62,12 +62,12 @@ nav
   .inner
     border-radius: 50%
     font-weight: bold
-    border: 1px solid blue
+    //border: 1px solid blue
     color: blue
     -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
     text-align: center
     text-transform: uppercase
-    font-size: 20px
+    font-size: 80px
     line-height: $size
     height: $size
     width: $size
