removed hover states

--- a/style.sass
+++ b/style.sass
@@ -76,11 +76,11 @@ nav
     opacity: 1
     //-webkit-animation: colorswap 30s infinite
     &:hover
-      -webkit-transform: scale(1.5)
+      //-webkit-transform: scale(1.5)
       // &::after
       //   opacity: 1
     &:active
-      -webkit-transform: scale(1.2)
+      //-webkit-transform: scale(1.2)
     // &::after
     //   content: attr(data-alt)
     //   position: absolute
