--- a/style.sass
+++ b/style.sass
@@ -64,6 +64,7 @@ nav
     font-weight: bold
     //border: 1px solid blue
     color: blue
+    margin: -40px
     -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
     text-align: center
     text-transform: uppercase
