--- a/style.sass
+++ b/style.sass
@@ -67,8 +67,8 @@ nav
     margin: -40px
     -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
     text-align: center
-    text-transform: uppercase
-    font-size: 80px
+    // text-transform: uppercase
+    font-size: 100px
     line-height: $size
     height: $size
     width: $size
