title as large translucent background

--- a/style.sass
+++ b/style.sass
@@ -63,23 +63,23 @@ nav
     border-radius: 50%
     font-weight: bold
     //border: 1px solid blue
-    color: blue
+    color: magenta
     margin: -40px
     -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
     text-align: center
     // text-transform: uppercase
-    font-size: 100px
+    font-size: 30vw
     line-height: $size
     height: $size
     width: $size
     cursor: -webkit-grab
     //color: magenta
-    opacity: 1
+    opacity: 0.2
     //-webkit-animation: colorswap 30s infinite
     &:hover
       //-webkit-transform: scale(1.5)
       // &::after
-      //   opacity: 1
+      opacity: 0.4
     &:active
       //-webkit-transform: scale(1.2)
     // &::after
