--- a/style.css
+++ b/style.css
@@ -57,16 +57,18 @@ nav {
   .head .inner {
     border-radius: 50%;
     font-weight: bold;
-    color: blue;
+    color: magenta;
     margin: -40px;
     -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.92);
     text-align: center;
-    font-size: 100px;
+    font-size: 30vw;
     line-height: 70px;
     height: 70px;
     width: 70px;
     cursor: -webkit-grab;
-    opacity: 1; }
+    opacity: 0.2; }
+    .head .inner:hover {
+      opacity: 0.4; }
 
 h2 {
   display: inline-block;
