--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   -webkit-transition: all 0.5s; }
 
 .wrap {
-  padding: 12em 10%;
+  padding: 10% 10%;
   margin: auto;
   max-width: 1000px; }
 
