--- a/style.sass
+++ b/style.sass
@@ -16,7 +16,7 @@ body
   -webkit-transition: all 0.5s
 
 .wrap
-  padding: 10% 10%
+  padding: 9% 15%
   margin: auto
   max-width: 1000px
 
@@ -143,3 +143,5 @@ section
     height: 50px
     width: 50px
     line-height: 50px
+  .wrap
+    padding: 9% 7%
