--- a/style.sass
+++ b/style.sass
@@ -3,25 +3,29 @@
   padding: 0
   font: inherit
   -webkit-box-sizing: border-box
+  -moz-box-sizing: border-box
+  box-sizing: border-box
   list-style: none
 
 html
-  font: 20px/1.25em "Karla", sans-serif
+  font: 24px/1.25em "Karla", sans-serif
 
 body
-  color: black
+  color: rgb(0, 95, 160)
   border-color: blue
-  //-webkit-animation: colorswap 30s infinite
-  background: white
+  background: #E0FFFB
   -webkit-transition: all 0.5s
+  -moz-transition: all 0.5s
+  transition: all 0.5s
 
 .wrap
   padding: 9% 15%
   margin: auto
-  max-width: 1000px
+  max-width: 1100px
 
 a, a:visited
   //-webkit-animation: colorswap 30s infinite
+  color: blue
   text-decoration: none
   border-bottom: 1px dotted blue
   &:hover
@@ -46,12 +50,39 @@ $size: 70px
     border-color: #0091ad
     color: #0091ad
 
+@-moz-keyframes colorswap
+  0%
+    border-color: #0091ad
+    color: #0091ad
+  33%
+    border-color: blue
+    color: blue
+  66%
+    border-color: red
+    color: red
+  100%
+    border-color: #0091ad
+    color: #0091ad
+
+@keyframes colorswap
+  0%
+    border-color: #0091ad
+    color: #0091ad
+  33%
+    border-color: blue
+    color: blue
+  66%
+    border-color: red
+    color: red
+  100%
+    border-color: #0091ad
+    color: #0091ad
 
 nav 
   -webkit-user-select: none
   height: 0em
   position: absolute
-  z-index: 999
+  //z-index: -999
   left: 0
   right: 0
   top: 0
@@ -62,33 +93,21 @@ nav
   .inner
     border-radius: 50%
     font-weight: bold
-    //border: 1px solid blue
-    color: magenta
+    color: white
     margin: -40px
     -webkit-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
+    -moz-transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
+    transition: all 0.3s cubic-bezier(0.335, 1.575, 0.515, 0.920)
     text-align: center
-    // text-transform: uppercase
     font-size: 30vw
     line-height: $size
     height: $size
     width: $size
     cursor: -webkit-grab
-    //color: magenta
-    opacity: 0.2
-    //-webkit-animation: colorswap 30s infinite
+    opacity: 1
     &:hover
-      //-webkit-transform: scale(1.5)
-      // &::after
-      opacity: 0.4
+      opacity: 0.8
     &:active
-      //-webkit-transform: scale(1.2)
-    // &::after
-    //   content: attr(data-alt)
-    //   position: absolute
-    //   left: 5px
-    //   right: 5px
-    //   text-align: center
-    //   opacity: 0
 
 h2
   display: inline-block
@@ -103,7 +122,9 @@ h3
   font-weight: bold
 
 section
+  position: relative
   padding-bottom: 5em
+  z-index: 999
 
 .info
   padding-top: 2em
@@ -115,28 +136,20 @@ section
   padding-top: 2em
 
 .people
-  //-webkit-columns: 3
+  -webkit-columns: 2
 
 .people > li
-  // cursor: pointer
   position: relative
   &::after
     font-size: 0.7em
+    line-height: 1.2em
     content: attr(data-about)
-    // border: 1px solid blue
-    // opacity: 0
     display: block
     padding-bottom: 1em
-    // position: absolute
-    // left: 120px
-    //padding: 0 1em
-    //margin: 0 1em
-    -webkit-animation: colorswap 30s infinite
-    // -webkit-transform: translate3d(-5px, 0, 0) scale(0.95)
+
     -webkit-transition: all 0.3s
-  // &:hover::after
-  //   opacity: 1
-  //   -webkit-transform: translate3d(0, 0, 0)
+    -moz-transition: all 0.3s
+    transition: all 0.3s
 
 @media (max-width: 500px)
   .head .inner
@@ -144,4 +157,4 @@ section
     width: 50px
     line-height: 50px
   .wrap
-    padding: 9% 7%
+    padding: 9% 5%  
