--- a/style.sass
+++ b/style.sass
@@ -11,26 +11,28 @@ html
   font: 24px/1.25em "Karla", sans-serif
 
 body
-  color: rgb(0, 95, 160)
+  color: white
   border-color: blue
-  background: #E0FFFB
+  background: blue //#EDF8F7
   -webkit-transition: all 0.5s
   -moz-transition: all 0.5s
   transition: all 0.5s
+  -webkit-animation: bgswap 100s infinite linear
 
 .wrap
   padding: 9% 15%
-  margin: auto
+  //margin: auto
   max-width: 1100px
 
 a, a:visited
   //-webkit-animation: colorswap 30s infinite
-  color: blue
+  color: inherit
   text-decoration: none
-  border-bottom: 1px dotted blue
+  border-bottom: 1px dotted white
   &:hover
     border-bottom-style: solid
-
+    color: blue
+    background: white
 
 
 
@@ -50,39 +52,22 @@ $size: 70px
     border-color: #0091ad
     color: #0091ad
 
-@-moz-keyframes colorswap
-  0%
-    border-color: #0091ad
-    color: #0091ad
-  33%
-    border-color: blue
-    color: blue
-  66%
-    border-color: red
-    color: red
-  100%
-    border-color: #0091ad
-    color: #0091ad
 
-@keyframes colorswap
+@-webkit-keyframes bgswap
   0%
-    border-color: #0091ad
-    color: #0091ad
+    background: blue
   33%
-    border-color: blue
-    color: blue
+    background: red
   66%
-    border-color: red
-    color: red
+    background: green
   100%
-    border-color: #0091ad
-    color: #0091ad
+    background: blue
 
 nav 
   -webkit-user-select: none
   height: 0em
   position: absolute
-  //z-index: -999
+  z-index: 0// 999
   left: 0
   right: 0
   top: 0
@@ -104,10 +89,16 @@ nav
     height: $size
     width: $size
     cursor: -webkit-grab
-    opacity: 1
+    opacity: 0.3
     &:hover
-      opacity: 0.8
+      opacity: 0.6
     &:active
+
+h1
+  // text-transform: uppercase 
+  padding-bottom: 1em
+  font-weight: bold
+  // font-size: 1.5em
 
 h2
   display: inline-block
@@ -121,19 +112,37 @@ h3
   text-transform: uppercase
   font-weight: bold
 
+// @-webkit-keyframes cursorflash
+//   0%, 20%
+//     opacity: 1
+//   26%, 74%
+//     opacity: 0
+//   80%, 100%
+//     opacity: 1
+
 section
+  //-webkit-animation: colorswap 30s infinite
   position: relative
-  padding-bottom: 5em
-  z-index: 999
+  margin-bottom: 5em
+  //z-index: 999
+
+// .cursor
+//   height: 0.95em
+//   width: 11px
+//   margin-bottom: -0.1em
+//   margin-left: 0.1em
+//   display: inline-block
+//   background: white
+//   //-webkit-animation: cursorflash 1.5s infinite
 
 .info
-  padding-top: 2em
+  margin-top: 2em
 
 .metadata
-  padding-bottom: 1em
+  margin-bottom: 1em
 
 .people
-  padding-top: 2em
+  margin-top: 2em
 
 .people
   -webkit-columns: 2
@@ -152,6 +161,9 @@ section
     transition: all 0.3s
 
 @media (max-width: 500px)
+  body
+    font-size: 20px
+    line-height: 1.2em
   .head .inner
     height: 50px
     width: 50px
