--- a/style.sass
+++ b/style.sass
@@ -20,8 +20,8 @@ body
   -webkit-animation: bgswap 100s infinite linear
 
 .wrap
-  padding: 9% 15%
-  //margin: auto
+  padding: 9% 15% 70% 15%
+  margin: auto
   max-width: 1100px
 
 a, a:visited
@@ -162,11 +162,13 @@ section
 
 @media (max-width: 500px)
   body
-    font-size: 20px
+    font-size: 22px
     line-height: 1.2em
   .head .inner
     height: 50px
     width: 50px
     line-height: 50px
   .wrap
-    padding: 9% 5%  
+    padding: 9% 5% 70% 5% 
+  .people
+    -webkit-columns: 1
