various copy tweaks

--- a/style.sass
+++ b/style.sass
@@ -20,9 +20,9 @@ body
   -webkit-animation: bgswap 120s infinite linear
 
 .wrap
-  padding: 9% 15% 70% 15%
+  padding: 9% 15% 40% 15%
   margin: auto
-  max-width: 1100px
+  max-width: 1050px
 
 a, a:visited
   //-webkit-animation: colorswap 30s infinite
@@ -106,7 +106,7 @@ h2
   font-weight: bold
   text-transform: uppercase
   letter-spacing: 0.2em
-  padding-bottom: 1rem
+  margin-bottom: 1rem
 
 h3
   text-transform: uppercase
@@ -169,6 +169,6 @@ section
     width: 50px
     line-height: 50px
   .wrap
-    padding: 9% 5% 70% 5% 
+    padding: 9% 5% 40% 5% 
   .people
     -webkit-columns: 1
