--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@ body {
   -webkit-animation: bgswap 120s infinite linear; }
 
 .wrap {
-  padding: 9% 15% 70% 15%;
+  padding: 9% 15% 40% 15%;
   margin: auto;
-  max-width: 1100px; }
+  max-width: 1050px; }
 
 a, a:visited {
   color: inherit;
@@ -103,7 +103,7 @@ h2 {
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.2em;
-  padding-bottom: 1rem; }
+  margin-bottom: 1rem; }
 
 h3 {
   text-transform: uppercase;
@@ -148,7 +148,7 @@ section {
     line-height: 50px; }
 
   .wrap {
-    padding: 9% 5% 70% 5%; }
+    padding: 9% 5% 40% 5%; }
 
   .people {
     -webkit-columns: 1; } }
