--- a/style.sass
+++ b/style.sass
@@ -92,6 +92,13 @@ nav
   left: 0
   right: 0
   top: 0
+  opacity: 0
+  -webkit-transition: opacity 2s
+  -moz-transition: opacity 2s
+  transition: opacity 2s
+
+.letters-ready nav
+  opacity: 1
 
 .head
   display: inline-block
