switched from webkit-columns to old-school div

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav {
     cursor: -webkit-grab;
     opacity: 0.3; }
     .head .inner:hover {
-      opacity: 0.6; }
+      opacity: 0.5; }
 
 h1 {
   padding-bottom: 1em;
@@ -140,7 +140,9 @@ section {
   margin-bottom: 1em; }
 
 .people {
-  margin-top: 2em; }
+  margin-top: 2em;
+  display: inline-block;
+  width: 49%; }
 
 .people > li {
   position: relative; }
@@ -178,4 +180,7 @@ section {
     padding: 9% 5% 40% 5%; }
 
   .people {
-    -webkit-columns: 1; } }
+    width: 100%; }
+
+  .people + .people {
+    margin-top: 0; } }
